# indi-qhy9-libqhyccd

./: CMakeLists.txt  README.md  indi_qhy9.xml
cmake_modules/: FindUSB-1.cmake
src/: qhy9.cc  qhy9.h
